Fix icon alignment in list editor

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -8081,6 +8081,9 @@ noscript {
     text-decoration: none;
     font-size: 16px;
     padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
   }
 }
 
